implement scrolling of CSS containers with the mousewheel

BUG: 121065


svn path=/trunk/KDE/kdelibs/; revision=626756